# hecate-web

./: .gitignore  BACKLOG.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.sh  convert-artwork-to-gif.sh  dev.sh  hw.sh  test-update.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_updater.rs  config_watcher.rs  daemon_streaming.rs  daemon_watcher.rs  gladiator_streaming.rs  irc_streaming.rs  lib.rs  main.rs  personality.rs  plugin_discovery.rs  plugin_streaming.rs  plugin_updater.rs  plugin_watcher.rs  snake_duel_streaming.rs  socket_proxy.rs  streaming.rs  traffic.rs  webview_opener.rs
src/lib/: api.test.ts  api.ts  artwork.ts  context.ts  plugin-runtime.ts  plugins-registry.ts  studios.ts  types.ts
src/lib/api/: sidebar-config.ts
src/lib/components/: AccordionGroup.svelte  ChatMessage.svelte  DaemonStartingOverlay.svelte  EmojiPicker.svelte  HeroClip.svelte  OnboardingOverlay.svelte  PluginCard.svelte  PluginUpdateModal.svelte  Sidebar.svelte  StatusBar.svelte  StreamingText.svelte  StudioTabs.svelte  ThemeToggle.svelte  TitleBar.svelte  UpdateModal.svelte
src/lib/components/arcade/: SnakeDuelView.svelte  (+1 more)
src/lib/mesh/: message-bridge.ts  studio-loader.ts
src/lib/stores/: agents.ts  daemon.ts  devops.ts  irc.ts  llm.ts  macula.ts  nodeIdentity.ts  personality.ts  pluginUpdater.ts  plugins.ts  settings.ts  sidebar.ts  theme.ts  traffic.ts  updater.ts
src/lib/types/: appstore.ts  llm.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/appstore/: +page.svelte
src/routes/arcade/: +page.svelte
src/routes/devops/: +page.svelte
src/routes/llm/: +page.svelte
src/routes/macula/: +page.svelte
src/routes/marketplace/: +page.svelte
src/routes/node/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/social/: +page.svelte
src/routes/trader/: +page.svelte
(+53 files in other folders)
